# leenfetch

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  PKGBUILD  README.md  SECURITY.md  SUPPORT.md  build.rs  compare_with_neofetch.sh  cpu_tmp_copy.rs  dist-workspace.toml  documentation.md  flags.ron  install.ps1  install.sh  leenfetch.1  leenfetch.1.md  leenfetch.spec  manual.md  print_layout.ron  toggles.ron
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-check.yml  ci.yml  publish-crates.yml  release.yml
.rpm/: leenfetch.spec
readme/: README-fa.md  README-ru.md  README-zh.md
src/: cache.rs  lib.rs  main.rs  system_info.rs  test_utils.rs
src/config/: default.rs  mod.rs  run.rs  settings.rs
src/config/defaults/: mod.rs
src/core/: core.rs  data.rs  mod.rs  parser.rs
src/modules/: ascii.rs  colors.rs  enums.rs  helper.rs  mod.rs  utils.rs
src/modules/linux/: ascii.rs  colors.rs  config.rs  helper.rs  mod.rs  packages.rs  run.rs  shell.rs  song.rs  title.rs
src/modules/linux/desktop/: de.rs  mod.rs  resolution.rs  theme.rs  wm.rs  wm_theme.rs
src/modules/linux/info/: battery.rs  cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  os_age.rs  uptime.rs
src/modules/linux/system/: distro.rs  kernel.rs  model.rs  os.rs
src/modules/windows/: ascii.rs  config.rs  helper.rs  mod.rs  packages.rs  process.rs  run.rs  shell.rs  song.rs  title.rs  utils.rs
src/modules/windows/desktop/: de.rs  mod.rs  resolution.rs  theme.rs  wm.rs  wm_theme.rs
src/modules/windows/info/: battery.rs  cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  os_age.rs  uptime.rs
src/modules/windows/system/: distro.rs  kernel.rs  mod.rs  model.rs  os.rs  os_age.rs
