[package]
name = "leenfetch"
version = "0.2.0"
edition = "2021"
description = "Fast, minimal, customizable system info tool in Rust (Neofetch alternative)"
license = "MIT"
repository = "https://github.com/drunkleen/leenfetch"
readme = "README.md"
categories = ["command-line-utilities", "visualization", "os"]
keywords = ["neofetch", "system", "terminal", "info", "leenfetch"]
authors = ["DrunkLeen <snape@drunkleen.com>"]

[dependencies]
dirs = "6.0.0"
libc = "0.2.172"
rand = "0.9.1"
regex = "1.11.1"
ron = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
unicode-width = "0.2.0"
use = "0.0.1-pre.0"
winapi = { version = "0.3.9", features = [
    "winreg",
    "winuser",
    "winerror",
    "winbase",
    "winnt",
] }
