[package]
name = "leenfetch"
version = "0.2.1"
edition = "2021"
description = "Fast, minimal, customizable system info tool in Rust (Neofetch alternative)"
license = "MIT"
repository = "https://github.com/drunkleen/leenfetch"
readme = "README.md"
categories = ["command-line-utilities", "visualization", "os"]
keywords = ["neofetch", "system", "terminal", "info", "leenfetch"]
authors = ["DrunkLeen <snape@drunkleen.com>"]

[dependencies]
dirs = "6.0.0"
libc = "0.2.172"
rand = "0.9.1"
regex = "1.11.1"
ron = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
unicode-width = "0.2.0"
use = "0.0.1-pre.0"
winapi = { version = "0.3.9", features = [
    "winreg",
    "winuser",
    "winerror",
    "winbase",
    "winnt",
] }


[package.metadata.dist]
ci = true
changelog = true
include = ["README.md", "LICENSE"]

[package.metadata.deb]
name = "leenfetch"
maintainer = "DrunkLeen <snape@drunkleen.com>"
extended-description = "Fast, minimal, customizable system info tool in Rust (Neofetch alternative)"
license-file = "LICENSE"
depends = "libc6 (>= 2.27), libgcc1 (>= 1:3.0), libx11-6 (>= 2:1.6.4), libxrandr2 (>= 2:1.5.0), libxext6 (>= 2:1.3.3), libxrender1 (>= 1:0.9.10), libxcb1 (>= 1.13), libxau6 (>= 1:1.0.8), libxdmcp6 (>= 1:1.1.2)"
section = "utils"
priority = "optional"


[package.metadata.rpm]
name = "leenfetch"
summary = "Fast and customizable system info tool for the terminal"
maintainer = "DrunkLeen <snape@drunkleen.com>"
extended-description = "Fast, minimal, customizable system info tool in Rust (Neofetch alternative)"
depends = "libc6 (>= 2.27), libgcc1 (>= 1:3.0), libx11-6 (>= 2:1.6.4), libxrandr2 (>= 2:1.5.0), libxext6 (>= 2:1.3.3), libxrender1 (>= 1:0.9.10), libxcb1 (>= 1.13), libxau6 (>= 1:1.0.8), libxdmcp6 (>= 1:1.1.2)"
section = "utils"
priority = "optional"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
leenfetch = { path = "/usr/bin/leenfetch" }

[package.metadata.rpm.target.x86_64-unknown-linux-gnu]
arch = "x86_64"

[package.metadata.rpm.target.aarch64-unknown-linux-gnu]
arch = "aarch64"
