[package]
name = "leenfetch"
version = "1.2.2"
edition = "2024"
rust-version = "1.96.0"
description = "Fast, minimal, customizable system info tool in Rust (Neofetch alternative)"
license = "MIT"
repository = "https://github.com/drunkleen/leenfetch"
readme = "README.md"
categories = ["command-line-utilities", "visualization", "os"]
keywords = ["neofetch", "system", "terminal", "info", "leenfetch"]
authors = ["DrunkLeen <snape@drunkleen.com>"]

[features]
default = []

[lib]
name = "leenfetch_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
libc = "0.2.186"
rand = "0.9.4"
regex = "1.12.4"
json5 = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.2.2"
rayon = "1.12.0"
once_cell = "1.21.4"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Power",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Devices_DeviceAndDriverInstallation",
] }

[package.metadata.dist]
ci = true
changelog = true
include = ["README.md", "LICENSE"]

[package.metadata.deb]
name = "leenfetch"
maintainer = "DrunkLeen <snape@drunkleen.com>"
extended-description = "Fast, minimal, customizable system info tool in Rust (Neofetch alternative)"
license-file = "LICENSE"
depends = "libc6 (>= 2.27), libgcc1 (>= 1:3.0)"
section = "utils"
priority = "optional"


[package.metadata.rpm]
name = "leenfetch"
summary = "Fast and customizable system info tool for the terminal"
maintainer = "DrunkLeen <snape@drunkleen.com>"
extended-description = "Fast, minimal, customizable system info tool in Rust (Neofetch alternative)"
depends = "libc6 (>= 2.27), libgcc1 (>= 1:3.0)"
section = "utils"
priority = "optional"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
leenfetch = { path = "/usr/bin/leenfetch" }

[package.metadata.rpm.target.x86_64-unknown-linux-gnu]
arch = "x86_64"

[package.metadata.rpm.target.aarch64-unknown-linux-gnu]
arch = "aarch64"
